--- a/src/sidebar/_overlap.scss
+++ b/src/sidebar/_overlap.scss
@@ -12,7 +12,7 @@
     --uc-sidebar-shadow-color: #28282F;
     --uc-autohide-sidebar-delay: 600ms; /* Wait 0.6s before hiding sidebar */
 
-    z-index: 1000 !important;
+    z-index: 1 !important;
     position: relative !important;
 
     box-shadow: 1px 0px 15px -10px var(--uc-sidebar-shadow-color);
